Bug 477492 - Option --help-all is ignored
Summary: Option --help-all is ignored
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-25 11:03 UTC by 0BADC0DE
Modified: 2023-11-27 06:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 0BADC0DE 2023-11-25 11:03:07 UTC
SUMMARY
Option "--help-all" is ignored


STEPS TO REPRODUCE
1. From terminal run: "falkon --help" . It says: "--help-all Displays help including Qt specific options.". Close the application.
2. From terminal run: "falkon --help-all"

OBSERVED RESULT
Falkon browser is started


EXPECTED RESULT
Falkon displays help including Qt specific options.


SOFTWARE/OS VERSIONS
Windows:  n/a
macOS:  n/a
Linux/KDE Plasma: 23.08.3-1
KDE Plasma Version: 5.27.9-1
KDE Frameworks Version: 5.112.0-2
Qt5 Version : 5.15.11+kde+r12-1
Qt6 Version : 6.6.0-3

ADDITIONAL INFORMATION
n/a
Comment 1 Juraj 2023-11-27 06:46:11 UTC
Git commit a11233cd5cfcf1bb7d13fd11a8ea04972d0ae3e1 by Juraj Oravec.
Committed on 27/11/2023 at 07:43.
Pushed by jurajo into branch 'master'.

Process the "--help-all" CLI argument
FIXED-IN: 23.08.4

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +4    -0    src/lib/app/commandlineoptions.cpp

https://invent.kde.org/network/falkon/-/commit/a11233cd5cfcf1bb7d13fd11a8ea04972d0ae3e1
Comment 2 Juraj 2023-11-27 06:52:34 UTC
Git commit b2d2b7268f8999b7f6c6353674098f248d2c9a39 by Juraj Oravec.
Committed on 27/11/2023 at 07:52.
Pushed by jurajo into branch 'release/23.08'.

Process the "--help-all" CLI argument
FIXED-IN: 23.08.4

Based upon: a11233cd5cfcf1bb7d13fd11a8ea04972d0ae3e1

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -0    CHANGELOG
M  +4    -0    src/lib/app/commandlineoptions.cpp

https://invent.kde.org/network/falkon/-/commit/b2d2b7268f8999b7f6c6353674098f248d2c9a39