Process the "--help-all" CLI argument

BUG: 477492
FIXED-IN: 23.08.4

Based upon: a11233cd5cfcf1bb7d13fd11a8ea04972d0ae3e1

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>